--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-image-lightbox": "^5.1.4",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "twilio": "^5.4.2",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "yet-another-react-lightbox": "^3.24.0"
   },
   "scripts": {
     "start": "react-scripts start",
