--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "yet-another-react-lightbox": "^3.24.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node index.js",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
