--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "yet-another-react-lightbox": "^3.24.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "react-scripts build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
