--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,4 @@ CLOUDINARY_CLOUD_NAME=dfxwpl6u2
 CLOUDINARY_API_KEY=189656264962427
 CLOUDINARY_API_SECRET=dNgMmAGGgZzeEmWd0rTKU2xcFbk
 PORT=5000
+REACT_APP_API_BASE=https://dreamdesign3d-3.onrender.com
